improve ci test matrix (#6)
Add continuous integration tests to include example script functionality
and output, as well as testing on multiple releases of Ghidra.