@@ -22,6 +22,11 @@ dependencies {
 	testImplementation('junit:junit:4.13')
 }
 
+test {
+  // needed for JRuby to function properly
+  jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens=java.base/java.io=ALL-UNNAMED'
+}
+
 repositories {
   mavenCentral()
 }
